Media Controls: Count the UA resources on the resource itself.

Move the UA resource counter into ImageResource itself. This means it
will always line up with the corresponding Resource counter and there is
no chance of a miscount.

BUG=790979

Change-Id: Icbb514b151cf9b2800807e3a201db51bdd506076