third_party/WebKit/Source/core/loader/resource/ImageResource.h
@@ -101,6 +101,10 @@ class CORE_EXPORT ImageResource final
 
   bool ShouldShowPlaceholder() const;
 
+  // If the ImageResource came from a user agent CSS stylesheet then we should
+  // flag it so that it can persist beyond navigation.
+  void FlagAsUserAgentResource();
+
   void Trace(blink::Visitor*) override;
 
  private:
@@ -179,6 +183,8 @@ class CORE_EXPORT ImageResource final
   double last_flush_time_ = 0.;
 
   bool is_during_finish_as_error_ = false;
+
+  bool is_referenced_from_ua_stylesheet_ = false;
 };
 
 DEFINE_RESOURCE_TYPE_CASTS(Image);
